# oarepo-runtime

./: .env-services  .gitignore  README.md  docker-compose-test.yml  docker-compose.test.yml  format.sh  oarepo-runtime-signposting-missing-datacite-issue.md  oarepo.yaml  pyproject.toml  qase.config.json  run-tests.sh  setup.cfg  test-setup.sh
.github/: copilot-instructions.md
.github/workflows/: build.yaml  main.yaml  manual-qase.yaml  manual.yaml  push.yaml  test.yaml  testmo.yaml
oarepo_runtime/: __init__.py  api.py  config.py  ext.py  ext_config.py  profile.py  proxies.py  tasks.py  uow.py
oarepo_runtime/cf/: __init__.py  mappings.py
oarepo_runtime/cli/: __init__.py  assets.py  cf.py  check.py  configuration.py  fixtures.py  index.py  permissions.py  search.py
oarepo_runtime/cli/permissions/: __init__.py  base.py  evaluate.py  search.py
oarepo_runtime/config/: permissions_presets.py  service.py
oarepo_runtime/datastreams/: __init__.py  asynchronous.py  catalogue.py  cli.py  datastreams.py  ext.py  fixtures.py  semi_asynchronous.py  synchronous.py  transformers.py  types.py  utils.py
oarepo_runtime/datastreams/readers/: __init__.py  excel.py  json.py  service.py  yaml.py
oarepo_runtime/datastreams/writers/: __init__.py  attachment.py  attachments_file.py  attachments_service.py  publish.py  service.py  yaml.py
oarepo_runtime/expansions/: expandable_fields.py  service.py
oarepo_runtime/facets/: date.py  facet_groups_names.py  max_facet.py  nested_facet.py  params.py
oarepo_runtime/i18n/: __init__.py  default_translations.py  dumper.py  schema.py  ui_schema.py
oarepo_runtime/info/: check.py  views.py
oarepo_runtime/info/permissions/: debug.py  instrumentation.py
oarepo_runtime/records/: __init__.py  drafts.py  mapping.py  pid_providers.py
oarepo_runtime/records/dumpers/: __init__.py  edtf_interval.py
oarepo_runtime/records/entity_resolvers/: __init__.py  proxies.py
oarepo_runtime/records/relations/: __init__.py  base.py  pid_relation.py
oarepo_runtime/records/systemfields/: __init__.py  base.py  featured_file.py  has_draftcheck.py  icu.py  mapping.py  owner.py  publication_status.py  record_status.py  relations.py  selectors.py  synthetic.py
oarepo_runtime/relations/: __init__.py  base.py  errors.py  lookup.py  pid_relation.py
oarepo_runtime/resolvers/: proxies.py
oarepo_runtime/resources/: __init__.py  config.py  filtered_ui_json_serializer.py  json_serializer.py  record_resource.py  resource.py  responses.py
oarepo_runtime/resources/signposting/: __init__.py
oarepo_runtime/services/: components.py  generators.py  icu.py  results.py  search.py  service.py  utils.py
oarepo_runtime/services/config/: __init__.py  components.py  draft_link.py  link_conditions.py  oarepo_rdm.py  permissions.py  permissions_presets.py  service.py
oarepo_runtime/services/custom_fields/: mappings.py
oarepo_runtime/services/facets/: __init__.py  date.py  date_range_histogram.py  min_facet.py  multilingual_facet.py  nested_facet.py  params.py  utils.py
oarepo_runtime/services/files/: components.py  (+1 more)
oarepo_runtime/tasks/: datastreams.py
oarepo_runtime/translations/: messages.pot
oarepo_runtime/ui/: marshmallow.py
oarepo_runtime/utils/: functools.py  identity_utils.py  index.py  path.py  wsgi.py
records/: records2
tests/: __ini__.py  __init__.py  conftest.py  edtf_interval_dumper_test.py  files.yaml  records2.yaml  test_action_query_filter.py  test_api.py  test_arbitrary_relations.py  test_async_fixtures.py  test_boolean_cf.py  test_cf_registry.py  test_cli.py  test_component_ordering.py  test_config.py  test_consistent_resolution.py  test_datacite_signposting.py  test_datastream_memory.py  test_datastream_readers.py  test_dict_only_schema.py  test_ext.py  test_facet_dates.py  test_facet_filter.py  test_facets.py  test_featured_file.py  test_files.py  test_fixtures.py  test_generators.py  test_i18n.py  test_i18n_ui.py  test_if_draft_generator.py  test_info_endpoints.py  test_lang_codes.py  test_link_permissions.py  test_locale.py  test_localized_dumpers.py  test_luqum_transformer.py  test_mapping_systemfield.py  test_multilingual_dumper.py  test_owner_field.py  (+35 more)
tests/cf_data/: catalogue.yaml  records.yaml
tests/czech_data/: records.yaml
tests/czech_search_data/: records.yaml
tests/data/: datacite_export.json  dublincore_export.xml  records.yaml  sample_data.yaml
tests/data_system_field/: records.yaml
tests/file_data/: catalogue.yaml  records2.yaml
tests/marshmallow_to_json/: test_datacite_ui_schema.py  test_simple_schema.py
tests/mock-module/: README.md  pyproject.toml
tests/mock-module/mock_module/: __init__.py  api.py  ext.py  models.py  resource.py  schemas.py  service.py  views.py
tests/mock-module/mock_module/jsonschemas/: __init__.py
tests/mock-module/mock_module/jsonschemas/records/: record-v1.0.0.json
tests/mock-module/mock_module/mappings/: __init__.py
tests/mock-module/mock_module/mappings/os-v1/draftsresources/: __init__.py
tests/mock-module/mock_module/mappings/os-v2/draftsresources/: __init__.py  draft-v1.0.0.json  record-v1.0.0.json
tests/mock-module/mock_module/mappings/v7/draftsresources/: __init__.py
tests/pkg_data/: async_records.yaml  catalogue.yaml  records.yaml
tests/records/: setup.cfg
tests/records2/: setup.cfg
tests/records2/data/: sample_data.yaml
tests/records2/records2/: cli.py  config.py  ext.py  proxies.py  views.py
tests/records2/records2/models/: model.json
tests/records2/records2/records/: api.py  dumper.py  models.py
tests/records2/records2/records/jsonschemas/: records2-1.0.0.json
tests/records2/records2/resources/records/: config.py  resource.py
tests/records2/records2/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py
tests/records2_async_data/: check_async_data_loaded.py  generate_async_data_for_import.py  invenio.cfg
tests/service_components/: __init__.py  test_component_data.py  test_component_ordering.py  test_deduplication.py  test_propagate_dependencies.py  test_topo_graph.py
tests/year_facet_data/: records.yaml
(+29 files in other folders)
