[metadata]
name = oarepo-runtime
version = 1.5.34
description = A set of runtime extensions of Invenio repository
authors = Alzbeta Pokorna
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.10
install_requires =
    marshmallow
    langcodes
    pyyaml
    openpyxl
    flask-babelex
    deepmerge
    tqdm

packages = find:

[options.packages.find]
exclude = records, records2, tests

[options.extras_require]
dev =
    pytest>=7.1.2
    black
    isort
    autoflake
    oarepo-tools
tests =
    pytest>=7.1.2
    psutil

# Generated with:
# git ls-files | egrep '^oarepo'  | grep -v '.py$' | grep -v '.gitkeep' | sed 's#/[^/]*$##' | sort -u | sed 's#$#/*,#' | sed 's#^[^/]*/##' |  tr '\n' ' '
[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2
oarepo_runtime = translations/*, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*

[tool:pytest]
testpaths =
    tests


[options.entry_points]
invenio_base.apps =
    oarepo_runtime = oarepo_runtime.ext:OARepoRuntime
invenio_base.api_apps =
    oarepo_runtime = oarepo_runtime.ext:OARepoRuntime
invenio_celery.tasks =
    oarepo_runtime_datastreams = oarepo_runtime.datastreams
invenio_base.blueprints =
    oarepo_runtime_info = oarepo_runtime.info.views:create_wellknown_blueprint


[oarepo.i18n]
# List of language codes for which translations should be managed
languages =
    cs
    en

# List of paths to scan for babel messages - python files and jinja templates are scanned
babel_source_paths =
    oarepo_runtime

# this is the location where python translations are generated.
babel_output_translations =
    oarepo_runtime/translations
