

[metadata]
name = records2
version = 1.0.0
description = A sample application for records2
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = records2 = records2.ext:Records2Ext
invenio_base.apps = records2 = records2.ext:Records2Ext
invenio_db.alembic = records2 = records2:alembic
invenio_db.models = records2 = records2.records.models
invenio_base.api_blueprints = records2 = records2.views:create_blueprint_from_app_records2
invenio_search.mappings = records2 = records2.records.mappings
invenio_jsonschemas.schemas = records2 = records2.records.jsonschemas
oarepo.models = records2 = records2.models:model.json
flask.commands = records2 = records2.cli:group
